plugins {
    alias(libs.plugins.androidApplication)
}

android {
    namespace 'psycho.euphoria.app'
    compileSdk 33

    defaultConfig {
        applicationId "psycho.euphoria.app"
        minSdk 26
        targetSdk 33
        versionCode 1
        versionName "1.0"

        ndk {
            abiFilters 'arm64-v8a'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    externalNativeBuild {
        cmake {
            path "/src/main/jni/CMakeLists.txt"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation libs.isoparser
    implementation("com.itextpdf:itextpdf:5.5.13.3")
}